# KickBacks

./: README.md  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml
kickback/: __init__.py  cli.py  main.py
kickback/api/: __init__.py  admin.py  app.py  deps.py  health.py
kickback/api/v1/: __init__.py  api_keys.py  documents.py  search.py  signals.py
kickback/core/: __init__.py  cache.py  db.py  flags.py  logging_config.py  middleware.py  rate_limit.py  ratelimit_lua.lua  retrying.py  security.py  settings.py  types.py
kickback/domain/: models.py  schemas.py
kickback/infra/: migrations_helpers.py
kickback/infra/repositories/: __init__.py  api_keys_repo.py  documents_repo.py  permissions_repo.py  search_repo.py  signals_repo.py
kickback/services/: api_keys.py  documents.py  projector.py  search.py  signals.py
migrations/: Untitled-1.md  env.py
migrations/versions/: 0001_init.py
old_project/: docker-compose.yml  main.py  pyproject.toml
tests/: conftest.py  test_api_keys.py  test_documents.py  test_projector.py  test_search.py  test_signals.py
