[project]
name = "signal-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "fastapi[standard]>=0.119.0",
    "pydantic>=2.12.2",
    "sqlalchemy>=2.0.44",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
line-length = 100
fix = true
src = ["app", "src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = ["E203", "E266"]
preview = false